--- a/index.html
+++ b/index.html
@@ -4,14 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- <link rel="stylesheet" href="css/reset.css"/> -->
+  <link rel="stylesheet" href="css/reset.css"/>
   <link rel="stylesheet" href="css/style.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
   <title>Chocolate Pizza</title>
 </head>
 <body>
   <header>
-    <h1>Chocolate Pizza</h1>
+    <div>
+      <img src="img/logo.png" alt="" class="headerLogo"/>
+      <h1 class="headerFont">Delicious</h1>
+      <p class="annoyingFont">THE BEST FOOD BLOG ON THE WEB.</p>
+    </div>
+    <nav>
+      <div id="headerIcons">
+        <ul>
+          <li><img src="img/fb-icon.png" alt="Facebook"/></li>
+          <li><img src="img/twit-icon.png" alt="Twitter"/></li>
+          <li><img src="img/fb-icon.png" alt="Facebook"/></li>
+          <li><img src="img/gp-icon.png" alt="Google"/></li>
+          <li><img src="img/insta-icon.png" alt="Instagram"/></li>
+          <li><img src="img/flic-icon.png" alt="Flickr"/></li>
+          <li><img src="img/pint-icon.png" alt="Pintrest"/></li>
+          <li><img src="img/rss-icon.png" alt="RSS"/></li>
+          <li><img src="img/mail-icon.png" alt="Email"/></li>
+        </ul>
+      </div>
+    </nav>
   </header>
+
+  <h1>Chocolate Pizza</h1>
+  <p>POSTED ON 15 DEC 2013 / DESSERTS</p>
+
+  <img src="img/print-icon.png" alt="Print"/>
+  <p>PRINT</p>>
+
+  <img src="img/choco-pizza.png" alt="Chocolate Pizza"/>
+
+  <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
 
   <script src="js/app.js"></script>
 </body>
