--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/reset.css"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
   <title>Chocolate Pizza</title>
 </head>
 <body>
@@ -37,11 +38,47 @@
   <p>POSTED ON 15 DEC 2013 / DESSERTS</p>
 
   <img src="img/print-icon.png" alt="Print"/>
-  <p>PRINT</p>>
+  <p>PRINT</p>
 
   <img src="img/choco-pizza.png" alt="Chocolate Pizza"/>
 
-  <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
+  <p>    For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.
+  Using an ice cream machine, pour liquids in to the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.  
+  </p>
+
+  <div class="hero-image">
+      <div class="hero-text">
+          <ul div class = "column1of2">
+              <li>1 1/2 cups milk</li>
+              <li>1/2 cup mascarpone</li>
+              <li>1/2 tsp pink salt</li>
+              <li>1 lb Black Mission Figs</li>
+              <li>1/2 cup brown sugar</li>
+              <li>2-4 tbsp water</li>
+              </ul>
+
+              <ul div class= "column2of2">
+                <li>1 1/2 cups heavy cream</li>
+                <li><del>1/3 granulated sugar</del></li>
+                <li><del>2 egg yolks</del></li>
+                <li>1 lemon, juiced</li>
+                <li>2 tbsp butter</li>
+                <li>1 cup honey roasted pecans, roughly chopped</li>
+            </ul>
+      </div>
+    </div>
+ 
+
+
+  <img src="img/van-pic.png" alt="image of face"/>
+  <h4>Vanessa Stevenson</h4>
+  <p>food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am. </p>
+  <button id="shareButton">SHARE RECIPE</button>
+
+  <footer id="footerID">
+      <img src="img/small-logo.png" alt="small logo"/>
+      <p>Delicious &copy 2013 All Rights Reserved. <br> Proudly published with Ghost.</p>
+  </footer>
 
   <script src="js/app.js"></script>
 </body>
