--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
 </head>
 <body>
   <header>
-    <div>
+    <div id="divHeader">
       <img src="img/logo.png" alt="" class="headerLogo"/>
       <h1 class="headerFont">Delicious</h1>
       <p class="annoyingFont">THE BEST FOOD BLOG ON THE WEB.</p>
     </div>
-    <nav>
-      <div id="headerIcons">
-        <ul>
-          <li><img src="img/fb-icon.png" alt="Facebook"/></li>
-          <li><img src="img/twit-icon.png" alt="Twitter"/></li>
-          <li><img src="img/fb-icon.png" alt="Facebook"/></li>
-          <li><img src="img/gp-icon.png" alt="Google"/></li>
-          <li><img src="img/insta-icon.png" alt="Instagram"/></li>
-          <li><img src="img/flic-icon.png" alt="Flickr"/></li>
-          <li><img src="img/pint-icon.png" alt="Pintrest"/></li>
-          <li><img src="img/rss-icon.png" alt="RSS"/></li>
-          <li><img src="img/mail-icon.png" alt="Email"/></li>
-        </ul>
-      </div>
-    </nav>
+        <nav>
+            <ul>
+              <li><img src="img/fb-icon.png" alt="Facebook"/></li>
+              <li><img src="img/twit-icon.png" alt="Twitter"/></li>
+              <li><img src="img/fb-icon.png" alt="Facebook"/></li>
+              <li><img src="img/gp-icon.png" alt="Google"/></li>
+              <li><img src="img/insta-icon.png" alt="Instagram"/></li>
+              <li><img src="img/flic-icon.png" alt="Flickr"/></li>
+              <li><img src="img/pint-icon.png" alt="Pintrest"/></li>
+              <li><img src="img/rss-icon.png" alt="RSS" id="rightIcons"/></li>
+              <li><img src="img/mail-icon.png" alt="Email" id="rightIcons"/></li>
+            </ul>
+        </nav>
   </header>
+
+  <hr>
 
   <h1>Chocolate Pizza</h1>
   <p>POSTED ON 15 DEC 2013 / DESSERTS</p>
@@ -40,7 +40,7 @@
   <img src="img/print-icon.png" alt="Print"/>
   <p>PRINT</p>
 
-  <img src="img/choco-pizza.png" alt="Chocolate Pizza"/>
+  <img src="img/choco-pizza.png" alt="Chocolate Pizza" id="chocoPizza"/>
 
   <p>    For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.
   Using an ice cream machine, pour liquids in to the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.  
@@ -59,8 +59,8 @@
 
               <ul div class= "column2of2">
                 <li>1 1/2 cups heavy cream</li>
-                <li><del>1/3 granulated sugar</del></li>
-                <li><del>2 egg yolks</del></li>
+                <li class="strike"><del>1/3 granulated sugar</del></li>
+                <li class="strike"><del>2 egg yolks</del></li>
                 <li>1 lemon, juiced</li>
                 <li>2 tbsp butter</li>
                 <li>1 cup honey roasted pecans, roughly chopped</li>
@@ -68,7 +68,7 @@
       </div>
     </div>
  
-
+  <hr>  
 
   <img src="img/van-pic.png" alt="image of face"/>
   <h4>Vanessa Stevenson</h4>
