--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
   <title>Chocolate Pizza</title>
-
-
 </head>
 <body>
     <header>
@@ -72,16 +70,15 @@
       </div>
     </div>
  
-
     <hr>
   <img id="vanessa" src="img/van-pic.png" alt="image of face"/>
   <button id="shareButton">SHARE RECIPE</button>
   <h4>Vanessa Stevenson</h4>
-  <p id="p4">food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am. </p>
+  <p id="p4">Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am. </p>
 
   <footer id="footerID">
       <img id="footerlogo" src="img/small-logo.png" alt="small logo"/>
-      <p id="footerText">Delicious &copy 2013 All Rights Reserved. <br> Proudly published with Ghost.</p>
+      <p id="footerText">Delicious &copy 2013 • All Rights Reserved. <br> Proudly published with Ghost.</p>
   </footer>
 
   <script src="js/app.js"></script>
